Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11658

ns_server does not issue drop_deletes flag for metadata purge of deleted item.

    XMLWordPrintable

Details

    • Triaged
    • Unknown

    Description

      Steps to reproduce:
      0)create default bucket and set the Metadata Purge Interval from UI to 0.04==1hour. No views are created.
      1)Insert a document with key "fooaaa". this is inserted in vbucket 14.
      2)delete the document.
      3) using ./couch_dbdump tool get the document metadata.
      ./couch_dbdump /opt/couchbase/var/lib/couchbase/data/default/14.couch.1
      cas: 18425762490303526, expiry: 1404756141, flags: 0
      doc deleted
      4)wait for 1 hour and generated workload (with different keys) such that auto compaction is triggered.
      5) using ./couch_dbdump tool it is seen that metadata is still present in newly compacted file i.e tombstone was not dropped.
      ./couch_dbdump /opt/couchbase/var/lib/couchbase/data/default/14.couch.2
      cas: 18425762490303526, expiry: 1404756141, flags: 0
      doc deleted

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            venu Venu Uppalapati (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty